# spritz

./: .gitignore  README.md  batch_config.json  pyproject.toml  requirements.txt  spritz.code-workspace  start.sh
configs/dyee/: config.py
configs/vbf2018/: cfg.json  config.py  script_worker_dumper.py
configs/vbfz-2016post/: config.py  run_local.sh  script_worker_dumper.py
configs/vbfz-2016pre/: config.py  run_local.sh  script_worker_dumper.py
configs/vbfz-2017/: config.py  run_local.sh  script_worker_dumper.py
configs/vbfz-2017/fits/: run_fit.sh
configs/vbfz-2018/: config.py  run_local.sh  script_worker_dumper.py
configs/vbfz-eft-2016post/: config.py
configs/zmumu_EFT/: config.py
data/2018/: forms.json
data/2018/samples/: samples_priv.json
data/Full2016v9HIPM/: cfg.json  forms.json
data/Full2016v9HIPM/rochester/: RoccoR2016ULa.txt
data/Full2016v9HIPM/samples/: active_samples.py  samples.json  samples_priv.json
data/Full2016v9noHIPM/: cfg.json  forms.json
data/Full2016v9noHIPM/rochester/: RoccoR2016ULb.txt
data/Full2016v9noHIPM/samples/: active_samples.py  samples.json  samples_priv.json
data/Full2017v9/: cfg.json  forms.json
data/Full2017v9/samples/: active_samples.py  samples.json  samples_priv.json
data/Full2018v9/: cfg.json  forms.json
data/Full2018v9/samples/: active_samples.py  samples.json  samples_priv.json
data/common/: LeptonSel_cfg.py  TrigMaker_cfg.py  forms.json  index.php  lumi.json
docs/: runner_default.md
notebooks/: check_rochester.py  check_triggers.py  check_triggers2.py  convert_correctionlib.py  download_data.py  dy_ratios.py  eras_trigger.py  run_to_era.py  test_data_jme.py  test_delta_phi.py  test_find_top_genpart.py  test_forms.py  test_jme.py  test_lepton_sf.py  test_lumi.py  test_lumis.py  trigger_converter.py  trigger_test.py  uproot_example.py
notebooks/lumis/: 16HIPM.csv  16noHIPM.csv  17.csv  18.csv
src/data/2018/: cfg_default.json
src/data/2018/samples/: samples.json
src/data/common/: LeptonSel.py  TrigMaker_cfg.py
src/modules/: dnn_evaluator.py  gen_analysis.py  jet_sel.py  lepton_sf.py  rochester.py  trigger_sf.py
src/spritz/: batch.py  chunks.py  framework.py  make_cards.py  plot.py  post_process.py  utils.py
src/spritz/framework/: framework.py  variation.py
src/spritz/lookup/: dense_lookup.py  lookup_base.py  rochester_lookup.py  txt_converters.py
src/spritz/lookup_tools/: dense_lookup.py  rochester_lookup.py
src/spritz/modules/: basic_selections.py  btag_sf.py  dnn_evaluator.py  gen_analysis.py  jet_sel.py  jme.py  lepton_sel.py  lepton_sf.py  prompt_gen.py  puid_sf.py  puweight.py  rochester.py  run_assign.py  theory_unc.py  trigger_sf.py
src/spritz/runners/: runner_3DY.py  runner_DYee.py  runner_default.py  runner_eft.py  script_worker_dumper.py
src/spritz/scripts/: batch.py  check_errors.py  chunks.py  fileset.py  make_cards.py  merge.py  merge_results.py  plot.py  plot_eft.py  post_process.py  resubmit.py  run_local.py
src/spritz/utils/: utils.py
